feat:秒杀、支付、查询秒杀结果接口

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@alicloud/pop-core": "^1.7.12",
+    "amqplib": "^0.10.3",
     "cos-nodejs-sdk-v5": "^2.11.16",
     "dotenv": "^16.0.1",
+    "ioredis": "^5.2.4",
     "js-md5": "^0.7.3",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
@@ -21,7 +23,8 @@
     "koa-multer": "^1.0.2",
     "koa-router": "^12.0.0",
     "moment": "^2.29.4",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "node-schedule": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
